# 3d-printing-ops

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SKILL.md  marketplace.json
.github/workflows/: ci.yml
mcp/klipper-ops-server/: README.md  pyproject.toml
mcp/klipper-ops-server/src/klipper_ops_mcp/: __init__.py  config.py  operations.py  server.py  transport.py
mcp/klipper-ops-server/tests/: test_config.py  test_operations.py  test_server.py
scripts/: backup-config.sh  check-config.sh  init-project.sh  pull-config-expanded.sh  pull-config.sh  ssh.sh  validate-project.py
scripts/lib/: printer-env.sh
skills/klipper-ops/: SKILL.md
skills/klipper-ops/agents/: openai.yaml
skills/klipper-ops/references/: mcp-tools.md
skills/klipper-ops/scripts/: backup-config.sh  check-config.sh  init-project.sh  logs.sh  pull-config-expanded.sh  pull-config.sh  push-config.sh  restart-service.sh  status.sh
skills/klipper-ops/scripts/lib/: printer-env.sh
tests/: test-shell.sh
