[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "klipper-ops-mcp"
version = "0.3.0"
description = "Typed, safety-gated MCP tools for Klipper printer host operations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anton Kostryukov" }]
dependencies = ["mcp>=1.27,<2"]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "ruff>=0.12,<1"]

[project.scripts]
klipper-ops-mcp = "klipper_ops_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/klipper_ops_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
